# Kernel_Energy

./: .gitignore  CMakeLists.txt
Cuda/: Kernel_Energy.cuh  kernel.cu  pcg.cuh
